k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-marketing-ingress
  namespace: email-marketing
  labels:
    app: email-marketing
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /webhooks/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webhook
                port:
                  number: 80
